--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "bootstrap-icons": "^1.11.3",
+    "bootstrap-css-only": "^4.4.1",
+    "@fortawesome/fontawesome-free": "6.5.1",
+    "mdb-react-ui-kit":"7.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
