--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "bootstrap-icons": "^1.11.3",
+    "react-bootstrap-icons": "1.10.3",
     "bootstrap-css-only": "^4.4.1",
     "@fortawesome/fontawesome-free": "6.5.1",
     "mdb-react-ui-kit":"7.1.0"
